# SaturnDataStudio

./: package-lock.json  package.json  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  saturn.db  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  main.rs
src/router/: index.ts
src/types/: PostgresConnection.d.ts
src/views/connections/: Connections.vue
src/views/connections/components/: ConnectionsList.vue
